# wrvm

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  install.sh
.claude-plugin/: marketplace.json
.claude/skills/wrvm/: SKILL.md
.github/workflows/: ci.yml  mirror-wamr-sync.yml  mirror-wamr.yml  release.yml
Formula/: wrvm.rb
docs/: design.md
plugins/wrvm/.claude-plugin/: plugin.json
plugins/wrvm/skills/wrvm/: SKILL.md
src/: appmanifest.rs  apps.rs  archive.rs  cache.rs  commands.rs  completions.rs  discovery.rs  doctor.rs  hash.rs  http.rs  install.rs  layout.rs  main.rs  manifest.rs  platform.rs  progress.rs  selfupdate.rs  shell.rs  shim.rs  spec.rs  usage.rs  util.rs
