[package]
name = "wrvm"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tegmentum/wrvm"
description = "wrvm — WAMR (WebAssembly Micro Runtime) version manager"

[[bin]]
name = "wrvm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1"
ureq = "2"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
